# allegro-fireflyiii

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  api.py  app.py  app_gui.py  const.py  data.py  entity.py  get_order_result.py  get_user_info.py  log_db.py  main.py  processor.py  processor_gui.py  pyproject.toml  requirements.txt  streamlit_app.py  worker.py
allegro_api/: api.py  get_order_result.py  get_user_info.py
