[project]
name = "allegro-fireflyiii"
version = "0.8.1"
description = "Sample project with cz bump"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.8.1"
tag_format = "v$version"
version_files = ["pyproject.toml"]
update_changelog_on_bump = true

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"
lint.select = ["E", "F", "I", "N"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]